--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!--
-Author: Bharadwaja Gummadi
-Author URL: https://github.com/bharadhwaj-g
+Author: Gowri Dath
+Author URL: https://github.com/GowriDath
 Note : It has been developed on top of W3layout template - http://w3layouts.com
 License: Creative Commons Attribution 3.0 Unported
 License URL: http://creativecommons.org/licenses/by/3.0/
@@ -9,7 +9,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <html>
 
 <head>
-  <title>Bharadwaja Gummadi| Home :: Portfolio</title>
+  <title>Gowri Dath| Home :: Portfolio</title>
   <link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="js/jquery.min.js"></script>
@@ -18,8 +18,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
   <!-- Custom Theme files -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <meta name="keywords" content="Bharadwaja Gummadi Resume Portfolio Preface Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template,
-Smartphone Compatible web template" />
+  <meta name="keywords" content="Gowri Dath Resume Portfolio Preface Responsive web template, Data Science Portfolio, Business Intelligence, Business Analytics,
+Python, R-Programming, Tableau, AWS" />
   <!-- Favicons -->
   <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
@@ -90,8 +90,13 @@ Smartphone Compatible web template" />
         </div>
         <div class="banner-info">
           <div class="col-md-7 header-right">
-            <h1>Bharadwaja Gummadi</h1>
-            <h6>FULL-STACK Software Engineer from Hyderabad.</h6>
+            <h1>Gowri Dath</h1>
+		  <p class="intro-position">
+	   				<span>Data Analysis</span>
+					   <span>Business Intelligence</span>
+	   				<span>Machine Learning</span> 
+	   			</p>
+            <h6>Aspiring BI Engineer </h6>
             <div class="hero__links">
               <a href="docs/Bharadwaj-Gummadi-Resume.pdf" target="_blank" class="hero__resume btn" title="Click to view my Resume">View Resume</a>
               <ul class="hero__social">
