--- a/index.html
+++ b/index.html
@@ -124,7 +124,12 @@ Python, R-Programming, Tableau, AWS" />
                   <li>GOWRI DATH</li>
                 </ul>
               </li>
-              
+              <li>
+                <ul class="address-text">
+                  <li><b>D.O.B</b></li>
+                  <li>16-FEB-1993</li>
+                </ul>
+              </li>
               <li>
                 <ul class="address-text">
                   <li><b>MOBILE </b></li>
@@ -134,7 +139,7 @@ Python, R-Programming, Tableau, AWS" />
               <li>
                 <ul class="address-text">
                   <li><b>E-MAIL </b></li>
-                  <li><a href="mailto:gowri.dath93@gmail.com"> gowri.dath93@gmail.com</a></li>
+                  <li><a href="mailto:gowri.dath@gmail.com"> gowri.dath@utdallas.edu</a></li>
                 </ul>
               </li>
               <li>
@@ -161,12 +166,8 @@ Python, R-Programming, Tableau, AWS" />
       <div id="owl-demo1" class="owl-carousel owl-carousel2">
         <div class="item">
           <div class="about-left-grid">
-            <h2>As a <span>Software Engineer</span></h2>
-            <p><strong>Since 2014,</strong> I have been working with <a href="http://osmosys.asia/" target="_blank">Osmosys software solutions</a>              as a software engineer, where I have been repeatedly recognized for developing innovative solutions for great
-              software,applications and solving a wide range of problems.
-              <p>Here, I am responsible for <strong>full lifecycle development</strong> of next-generation software, from initial
-                requirement gathering to design, coding, unit testing, documentation and integration & deployment.</p>
-              <ul>
+            <h2>As a <span>Let me introdcuce myself.</h2>
+            <p>Analytical Thinker and problem solver with an ability to translate data into valuable insights. 3 years of industry exposure in data and analytics has prepared me to excel in any role. I have developed deep proficiency in data exploration, modelling and visualization techniques through which I can understand data and solve critical business problems. </p>
                 <li><a class="a-btn-a scroll" href="#port">My Work</a></li>
                 <li><a class="a-btn-h scroll" href="#contact">Hire Me</a></li>
               </ul>
@@ -246,11 +247,11 @@ Python, R-Programming, Tableau, AWS" />
         <div class="col-md-6 wthree_about_right_grid">
           <div class="col-xs-2 wthree_about_right_grid_left">
             <div class="hvr-rectangle-in">
-              <i class="glyphicon glyphicon-fire"></i>
+              <i class="glyphicon glyphicon-th-large"></i>
             </div>
           </div>
           <div class="col-xs-10 wthree_about_right_grid_right">
-            <h4>PROGRAMMING LANGUAGES</h4>
+            <h4>Front-end Development</h4>
           </div>
           <div class="clearfix"> </div>
           <div class="col-md-12 skill-group-div">
@@ -258,32 +259,31 @@ Python, R-Programming, Tableau, AWS" />
             <div class="col-md-6 left-div">
               <div class="progress skill-bar">
                 <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
-                  <span class="skill">PYTHON <i class="val">85%</i></span>
+                  <span class="skill">HTML <i class="val">85%</i></span>
                 </div>
               </div>
             </div>
             <div class="col-md-6 right-div">
               <div class="progress skill-bar">
                 <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
-                  <span class="skill">R-Programming<i class="val">80%</i></span>
+                  <span class="skill">CSS <i class="val">80%</i></span>
                 </div>
               </div>
             </div>
             <div class="col-md-6 left-div">
               <div class="progress skill-bar">
                 <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
-                  <span class="skill">SQL<i class="val">85%</i></span>
+                  <span class="skill">Bootstrap <i class="val">85%</i></span>
                 </div>
               </div>
             </div>
             <div class="col-md-6 right-div">
               <div class="progress skill-bar">
                 <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
-                  <span class="skill">SAS <i class="val">80%</i></span>
+                  <span class="skill">MaterialUI <i class="val">80%</i></span>
                 </div>
               </div>
             </div>
-			
             <div class="col-md-6 left-div">
               <div class="progress skill-bar">
                 <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="72" aria-valuemin="0" aria-valuemax="100">
@@ -294,35 +294,55 @@ Python, R-Programming, Tableau, AWS" />
             <div class="col-md-6 right-div">
               <div class="progress skill-bar">
                 <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-                  <span class="skill">HTML <i class="val">75%</i></span>
+                  <span class="skill">Jquery <i class="val">75%</i></span>
                 </div>
               </div>
             </div>
-            
+            <div class="col-md-6 left-div">
+              <div class="progress skill-bar">
+                <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
+                  <span class="skill">AngularJs <i class="val">70%</i></span>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 right-div">
+              <div class="progress skill-bar">
+                <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="68" aria-valuemin="0" aria-valuemax="100">
+                  <span class="skill">ReactJs <i class="val">68%</i></span>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 left-div">
+              <div class="progress skill-bar">
+                <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="73" aria-valuemin="0" aria-valuemax="100">
+                  <span class="skill">VueJs <i class="val">73%</i></span>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="clearfix"> </div>
         </div>
         <div class="col-md-6 wthree_about_right_grid">
           <div class="col-xs-2 wthree_about_right_grid_left">
             <div class="hvr-rectangle-in">
-              <i class="glyphicon glyphicon-tasks"></i>
+              <i class="glyphicon glyphicon-leaf"></i>
             </div>
           </div>
           <div class="col-xs-10 wthree_about_right_grid_right">
-            <h4>BI/Reporting Tools </h4>
+            <h4>Server-side Development</h4>
           </div>
           <div class="clearfix"> </div>
           <div class="col-md-12 skill-group-div">
             <!-- Skill Bars -->
             <div class="progress skill-bar ">
               <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
-                <span class="skill">Tableau <i class="val">85%</i></span>
+                <span class="skill">PHP <i class="val">80%</i></span>
               </div>
             </div>
             <div class="col-md-6">
               <div class="progress skill-bar">
                 <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-                  <span class="skill">PowerBI <i class="val">75%</i></span>
+                  <span class="skill">CakePHP <i class="val">75%</i></span>
                 </div>
               </div>
             </div>
