--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ Python, R-Programming, Tableau, AWS" />
       <div id="owl-demo1" class="owl-carousel owl-carousel2">
         <div class="item">
           <div class="about-left-grid">
-            <h2>As a <span>Let me introdcuce myself.</h2>
+            <h2>Let me introdcuce myself.</h2>
             <p>Analytical Thinker and problem solver with an ability to translate data into valuable insights. 3 years of industry exposure in data and analytics has prepared me to excel in any role. I have developed deep proficiency in data exploration, modelling and visualization techniques through which I can understand data and solve critical business problems. </p>
                 <li><a class="a-btn-a scroll" href="#port">My Work</a></li>
                 <li><a class="a-btn-h scroll" href="#contact">Hire Me</a></li>
