--- a/index.html
+++ b/index.html
@@ -124,12 +124,7 @@ Python, R-Programming, Tableau, AWS" />
                   <li>GOWRI DATH</li>
                 </ul>
               </li>
-              <li>
-                <ul class="address-text">
-                  <li><b>D.O.B</b></li>
-                  <li>16-FEB-1993</li>
-                </ul>
-              </li>
+              
               <li>
                 <ul class="address-text">
                   <li><b>MOBILE </b></li>
@@ -139,7 +134,7 @@ Python, R-Programming, Tableau, AWS" />
               <li>
                 <ul class="address-text">
                   <li><b>E-MAIL </b></li>
-                  <li><a href="mailto:gowri.dath@gmail.com"> gowri.dath@utdallas.edu</a></li>
+                  <li><a href="mailto:gowri.dath93@gmail.com"> gowri.dath93@gmail.com</a></li>
                 </ul>
               </li>
               <li>
@@ -166,42 +161,16 @@ Python, R-Programming, Tableau, AWS" />
       <div id="owl-demo1" class="owl-carousel owl-carousel2">
         <div class="item">
           <div class="about-left-grid">
-            <h2>Let me introdcuce myself.</h2>
-            <p>Analytical Thinker and problem solver with an ability to translate data into valuable insights. 3 years of industry exposure in data and analytics has prepared me to excel in any role. I have developed deep proficiency in data exploration, modelling and visualization techniques through which I can understand data and solve critical business problems. </p>
-                <li><a class="a-btn-a scroll" href="#port">My Work</a></li>
+            <h2>Let me introduce myself.</h2>
+            <p>Analytical Thinker and problem solver with an ability to translate data into valuable insights. 3 years of industry exposure in data and analytics has prepared me to excel in any role. I have developed deep proficiency in data exploration, modelling and visualization techniques through which I can understand data and solve critical business problems.</p>
+              <ul>
+                <li><a class="a-btn-a scroll" href="#work">My Work</a></li>
                 <li><a class="a-btn-h scroll" href="#contact">Hire Me</a></li>
-            </div>
-        </div>
-        <div class="item">
-          <div class="about-left-grid">
-            <h2>My <span>Education</span></h2>
-            <p>I've completed my,
-              <P>
-                <p>M.Tech in Computer science from <a href="http://www.vits.ac.in/" target="_blank"> Vivekananda Institute of Engineering & Technology</a>,
-                  Hyderabad, during the period of 2013 - 2015.
-                  <p>B.Tech in Computer sceience from <a href="http://www.audisankarait.ac.in/" target="_blank">Audisankara Institute of Technology</a>                    Gudur, during the period of 2009 - 2013.</p>
-                  <ul>
-                    <li><a class="a-btn-a scroll" href="#port">My Work</a></li>
-                    <li><a class="a-btn-h scroll" href="#contact">Hire Me</a></li>
-                  </ul>
+              </ul>
           </div>
         </div>
-        <div class="item">
-          <div class="about-left-grid">
-            <h2>Free time or <span>Hobbies</span></h2>
-            <p>When I’m not in front of a computer I enjoy traveling, CrossFit, participating in tech events like Hackathon,
-              Hackmeet etc.</p>
-            <p>I have been fortunate to learn and having new experiences in general.</p>
-            <ul>
-              <li><a class="a-btn-a scroll" href="#port">My Work</a></li>
-              <li><a class="a-btn-h scroll" href="#contact">Hire Me</a></li>
-            </ul>
-          </div>
-        </div>
+        </div> 
       </div>
-    </div>
-    <div class="col-md-6 about-right">
-
     </div>
     <div class="clearfix"> </div>
     <link href="css/owl.carousel.css" rel="stylesheet">
@@ -246,11 +215,11 @@ Python, R-Programming, Tableau, AWS" />
         <div class="col-md-6 wthree_about_right_grid">
           <div class="col-xs-2 wthree_about_right_grid_left">
             <div class="hvr-rectangle-in">
-              <i class="glyphicon glyphicon-th-large"></i>
+              <i class="glyphicon glyphicon-fire"></i>
             </div>
           </div>
           <div class="col-xs-10 wthree_about_right_grid_right">
-            <h4>Front-end Development</h4>
+            <h4>PROGRAMMING LANGUAGES</h4>
           </div>
           <div class="clearfix"> </div>
           <div class="col-md-12 skill-group-div">
@@ -258,31 +227,32 @@ Python, R-Programming, Tableau, AWS" />
             <div class="col-md-6 left-div">
               <div class="progress skill-bar">
                 <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
-                  <span class="skill">HTML <i class="val">85%</i></span>
+                  <span class="skill">PYTHON <i class="val">85%</i></span>
                 </div>
               </div>
             </div>
             <div class="col-md-6 right-div">
               <div class="progress skill-bar">
                 <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
-                  <span class="skill">CSS <i class="val">80%</i></span>
+                  <span class="skill">R-Programming<i class="val">80%</i></span>
                 </div>
               </div>
             </div>
             <div class="col-md-6 left-div">
               <div class="progress skill-bar">
                 <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
-                  <span class="skill">Bootstrap <i class="val">85%</i></span>
+                  <span class="skill">SQL<i class="val">85%</i></span>
                 </div>
               </div>
             </div>
             <div class="col-md-6 right-div">
               <div class="progress skill-bar">
                 <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
-                  <span class="skill">MaterialUI <i class="val">80%</i></span>
+                  <span class="skill">SAS <i class="val">80%</i></span>
                 </div>
               </div>
             </div>
+			
             <div class="col-md-6 left-div">
               <div class="progress skill-bar">
                 <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="72" aria-valuemin="0" aria-valuemax="100">
@@ -293,55 +263,35 @@ Python, R-Programming, Tableau, AWS" />
             <div class="col-md-6 right-div">
               <div class="progress skill-bar">
                 <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-                  <span class="skill">Jquery <i class="val">75%</i></span>
+                  <span class="skill">HTML <i class="val">75%</i></span>
                 </div>
               </div>
             </div>
-            <div class="col-md-6 left-div">
-              <div class="progress skill-bar">
-                <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
-                  <span class="skill">AngularJs <i class="val">70%</i></span>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6 right-div">
-              <div class="progress skill-bar">
-                <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="68" aria-valuemin="0" aria-valuemax="100">
-                  <span class="skill">ReactJs <i class="val">68%</i></span>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6 left-div">
-              <div class="progress skill-bar">
-                <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="73" aria-valuemin="0" aria-valuemax="100">
-                  <span class="skill">VueJs <i class="val">73%</i></span>
-                </div>
-              </div>
-            </div>
+            
           </div>
           <div class="clearfix"> </div>
         </div>
         <div class="col-md-6 wthree_about_right_grid">
           <div class="col-xs-2 wthree_about_right_grid_left">
             <div class="hvr-rectangle-in">
-              <i class="glyphicon glyphicon-leaf"></i>
+              <i class="glyphicon glyphicon-tasks"></i>
             </div>
           </div>
           <div class="col-xs-10 wthree_about_right_grid_right">
-            <h4>Server-side Development</h4>
+            <h4>BI/Reporting Tools </h4>
           </div>
           <div class="clearfix"> </div>
           <div class="col-md-12 skill-group-div">
             <!-- Skill Bars -->
             <div class="progress skill-bar ">
               <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
-                <span class="skill">PHP <i class="val">80%</i></span>
+                <span class="skill">Tableau <i class="val">85%</i></span>
               </div>
             </div>
             <div class="col-md-6">
               <div class="progress skill-bar">
                 <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-                  <span class="skill">CakePHP <i class="val">75%</i></span>
+                  <span class="skill">PowerBI <i class="val">75%</i></span>
                 </div>
               </div>
             </div>
