--- a/index.html
+++ b/index.html
@@ -459,6 +459,78 @@ Python, R-Programming, Tableau, AWS" />
     </div>
   </div>
   <!--//work-experience-->
+  <!--Education-->
+  <div id="work" class="work">
+    <div class="container">
+      <div class="service-head text-center">
+        <h4>EDUCATION</h4>
+        <h3>MY <span>ACADEMICS</span></h3>
+        <span class="border one"></span>
+      </div>
+      <div class="time-main w3l-agile">
+        <div class="col-md-6 year-info">
+          <ul class="year">
+            <li>August 2018 - May 2020 <i class="glyphicon glyphicon-arrow-right"></i> <span id="tillDate"></span></li>
+            <div class="clearfix"></div>
+          </ul>
+        </div>
+        <ul class="col-md-6 timeline">
+          <li>
+            <div class="timeline-badge info"><i class="glyphicon glyphicon-education"></i></div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4 class="timeline-title"><a>The University Of Texas at Dallas,<i>Dallas, Texas </i></a></h4>
+				<h5 class="timeline-title"><a>Master's in Business Analytics</a></h5>
+              </div>
+              <div class="timeline-body">
+                <p>&#9679 Programming languages: Python, R, SQL<br>
+
+ 
+					&#9679 SQL and NoSQL databases: MySQL, MSSQL, MongoDB, Oracle<br>
+
+ 
+					&#9679 Big Data systems: Hadoop, Spark, Hive, Sqoop, NoSQL<br>
+
+ 
+					&#9679 Web, API's and Social Media Data Mining Techniques<br>
+
+ 
+					&#9679 Cloud services: AWS<br>
+
+ 
+					&#9679 Business Intelligence tools: Tableau, Power BI, Alteryx<br>
+
+ 
+					&#9679 Statistics and Prediction Models for Data Analytics using SAS<br>
+
+ 
+					&#9679 Business Analytics: Goals, Insights, Metrics, KPIs, Accuracy<br>
+
+ 
+					&#9679 Web Analytics: Google Analytics and Adobe Analytics</p>
+               
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <div class="timeline-badge primary"><i class="glyphicon glyphicon-education"></i></div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4 class="timeline-title"><a> Visveswaraya Technological University,<i> Bangalore, India</i></a></h4>
+				<h5 class="timeline-title"><a>Bachelor's in Information Science </a></h5>
+              </div>
+              <div class="timeline-body">
+                <p></p>
+              </div>
+            </div>
+          </li>
+        </ul>
+        <div class="clearfix"></div>
+      </div>
+    </div>
+  </div>
+  <!--//Education-->
   <!-- top-grids -->
   <div class="blog" id="blogs">
     <div class="container">
