--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@ Python, R-Programming, Tableau, AWS" />
             <div class="timeline-badge info"><i class="glyphicon glyphicon-education"></i></div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4 class="timeline-title"><a>The University Of Texas at Dallas,<i>Dallas, Texas </i></a></h4>
+                <h4 class="timeline-title"><a>The University Of Texas at Dallas,<i> Dallas, Texas </i></a></h4>
 				<h5 class="timeline-title"><a>Master's in Business Analytics</a></h5>
               </div>
               <div class="timeline-body">
@@ -512,7 +512,13 @@ Python, R-Programming, Tableau, AWS" />
               </div>
             </div>
           </li>
-
+			<div class="col-md-6 year-info">
+			<ul class="year">
+            <li>September 2011 - May 2015 <i class="glyphicon glyphicon-arrow-right"></i> <span id="tillDate"></span></li>
+            <div class="clearfix"></div>
+			</ul>
+			</div>
+			<ul class="col-md-6 timeline">
           <li>
             <div class="timeline-badge primary"><i class="glyphicon glyphicon-education"></i></div>
             <div class="timeline-panel">
