--- a/index.html
+++ b/index.html
@@ -460,11 +460,12 @@ Python, R-Programming, Tableau, AWS" />
   </div>
   <!--//work-experience-->
   <!--Education-->
+  <!--work-experience-->
   <div id="work" class="work">
     <div class="container">
       <div class="service-head text-center">
-        <h4>EDUCATION</h4>
-        <h3>MY <span>ACADEMICS</span></h3>
+        <h4>WHAT I LEARNT</h4>
+        <h3>MY <span>EDUCATION</span></h3>
         <span class="border one"></span>
       </div>
       <div class="time-main w3l-agile">
@@ -479,67 +480,40 @@ Python, R-Programming, Tableau, AWS" />
             <div class="timeline-badge info"><i class="glyphicon glyphicon-education"></i></div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4 class="timeline-title"><a>The University Of Texas at Dallas,<i> Dallas, Texas </i></a></h4>
-				<h5 class="timeline-title"><a>Master's in Business Analytics</a></h5>
+                <h4 class="timeline-title"><a>UTD <i>Dallas, Texas</i></a></h4>
               </div>
               <div class="timeline-body">
-                <p>&#9679 Programming languages: Python, R, SQL<br>
-
- 
-					&#9679 SQL and NoSQL databases: MySQL, MSSQL, MongoDB, Oracle<br>
-
- 
-					&#9679 Big Data systems: Hadoop, Spark, Hive, Sqoop, NoSQL<br>
-
- 
-					&#9679 Web, API's and Social Media Data Mining Techniques<br>
-
- 
-					&#9679 Cloud services: AWS<br>
-
- 
-					&#9679 Business Intelligence tools: Tableau, Power BI, Alteryx<br>
-
- 
-					&#9679 Statistics and Prediction Models for Data Analytics using SAS<br>
-
- 
-					&#9679 Business Analytics: Goals, Insights, Metrics, KPIs, Accuracy<br>
-
- 
-					&#9679 Web Analytics: Google Analytics and Adobe Analytics</p>
-               
+                <p>We are an established company with 12 years of industry standing. Experienced in providing software services
+                  to clients across the world at various time zones. Customer Relations are our forte and we ensure our clients
+                  are given the best support possible.</p>
+                <p><strong>Great! place to learn.</strong></p>
               </div>
             </div>
           </li>
-			<div class="col-md-6 year-info">
-			<ul class="year">
-            <li>September 2011 - May 2015 <i class="glyphicon glyphicon-arrow-right"></i> <span id="tillDate"></span></li>
+          <div class="col-md-6 year-info">
+          <ul class="year">
+            <li>August 2011 - May 2015 <i class="glyphicon glyphicon-arrow-right"></i> <span id="tillDate"></span></li>
             <div class="clearfix"></div>
-			</ul>
-			</div>
-			<ul class="col-md-6 timeline">
-			
+          </ul>
+        </div>
           <li>
             <div class="timeline-badge primary"><i class="glyphicon glyphicon-education"></i></div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4 class="timeline-title"><a> Visveswaraya Technological University,<i> Bangalore, India</i></a></h4>
-				<h5 class="timeline-title"><a>Bachelor's in Information Science </a></h5>
+                <h4 class="timeline-title"><a> VTU</a></h4>
               </div>
               <div class="timeline-body">
-                <p></p>
+                <p>Through Osmosys I got a chance to work at Cox and kings for some period, Currently I'm working on <strong><a href="http://www.coxandkings.com/"><strong>Holidays Engine</strong></a>
+                  project in CKGS</strong>.</p>
               </div>
             </div>
           </li>
-        
+        </ul>
         <div class="clearfix"></div>
-		</ul>
       </div>
     </div>
   </div>
-  
-  <!--//Education-->
+  <!--Education-->
   <!-- top-grids -->
   <div class="blog" id="blogs">
     <div class="container">
@@ -704,9 +678,6 @@ Python, R-Programming, Tableau, AWS" />
             named SLogErr, Software Logging errors for FREE.
           </p>
           <a href="#" data-toggle="modal" data-target="#slogerrMdl" class="read hvr-shutter-in-horizontal">Read More</a>
-        </div>
-        <div class="clearfix"></div>
-      </div>
 
     </div>
   </div>
@@ -714,7 +685,10 @@ Python, R-Programming, Tableau, AWS" />
   <!-- /blog-pop-->
   <div class="modal ab fade" id="baseDriveMdl" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog about" role="document">
-      <div class="modal-content about">
+      <di        </div>
+        <div class="clearfix"></div>
+      </div>
+v class="modal-content about">
         <div class="modal-header">
           <span class="project-title">BaseDrive - Pay As You Drive</span>
           <button type="button" class="close ab" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
