--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@ Python, R-Programming, Tableau, AWS" />
       <div class="time-main w3l-agile">
         <div class="col-md-6 year-info">
           <ul class="year">
-            <li>JUN 2014 <i class="glyphicon glyphicon-arrow-right"></i> <span id="tillDate"></span></li>
+            <li>MAY 2019 - AUG 2019 <i class="glyphicon glyphicon-arrow-right"></i> <span id="tillDate"></span></li>
             <div class="clearfix"></div>
           </ul>
         </div>
@@ -430,7 +430,7 @@ Python, R-Programming, Tableau, AWS" />
             <div class="timeline-badge info"><i class="glyphicon glyphicon-briefcase"></i></div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4 class="timeline-title"><a href="http://osmosys.asia/" target="_blank">Osmosys Software Solutions Pvt Ltd, <i>Hyderabad, India</i></a></h4>
+                <h4 class="timeline-title"><a>Transamerica, <i>Denver, CO</i></a></h4>
               </div>
               <div class="timeline-body">
                 <p>We are an established company with 12 years of industry standing. Experienced in providing software services
@@ -439,13 +439,20 @@ Python, R-Programming, Tableau, AWS" />
                 <p><strong>Great! place to learn.</strong></p>
               </div>
             </div>
-          </li>
-
+          </ul>
+		  </li>
+		  <div class="col-md-6 year-info">
+          <ul class="year">
+            <li>JUlY 2015 - JUNE 2018 <i class="glyphicon glyphicon-arrow-right"></i> <span id="tillDate"></span></li>
+            <div class="clearfix"></div>
+          </ul>
+        </div>
+        <ul class="col-md-6 timeline">
           <li>
             <div class="timeline-badge primary"><i class="glyphicon glyphicon-briefcase"></i></div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4 class="timeline-title"><a href="http://www.ckgs.com/about-us/company-profile.html"> COX and KINGS</a></h4>
+                <h4 class="timeline-title"><a>Pegasystems Inc, <i> Bangalore, India</i></a></h4>
               </div>
               <div class="timeline-body">
                 <p>Through Osmosys I got a chance to work at Cox and kings for some period, Currently I'm working on <strong><a href="http://www.coxandkings.com/"><strong>Holidays Engine</strong></a>
