--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@ Python, R-Programming, Tableau, AWS" />
                 <p>We are an established company with 12 years of industry standing. Experienced in providing software services
                   to clients across the world at various time zones. Customer Relations are our forte and we ensure our clients
                   are given the best support possible.</p>
-                <p><strong>Great! place to learn.</strong></p>
+                
               </div>
             </div>
           </ul>
@@ -467,12 +467,12 @@ Python, R-Programming, Tableau, AWS" />
   </div>
   <!--//work-experience-->
   <!--Education-->
-  <!--work-experience-->
-  <div id="work" class="work">
+ 
+  <div id="education" class="education">
     <div class="container">
       <div class="service-head text-center">
-        <h4>WHAT I LEARNT</h4>
-        <h3>MY <span>EDUCATION</span></h3>
+        <h4>EDUCATION</h4>
+        <h3>MY <span>ACADEMICS</span></h3>
         <span class="border one"></span>
       </div>
       <div class="time-main w3l-agile">
@@ -496,6 +496,7 @@ Python, R-Programming, Tableau, AWS" />
                 <p><strong>Great! place to learn.</strong></p>
               </div>
             </div>
+			</ul>
           </li>
           <div class="col-md-6 year-info">
           <ul class="year">
@@ -503,6 +504,7 @@ Python, R-Programming, Tableau, AWS" />
             <div class="clearfix"></div>
           </ul>
         </div>
+		<ul class="col-md-6 timeline">
           <li>
             <div class="timeline-badge primary"><i class="glyphicon glyphicon-education"></i></div>
             <div class="timeline-panel">
