--- a/index.html
+++ b/index.html
@@ -487,12 +487,19 @@ Python, R-Programming, Tableau, AWS" />
             <div class="timeline-badge info"><i class="glyphicon glyphicon-education"></i></div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4 class="timeline-title"><a>UTD <i>Dallas, Texas</i></a></h4>
+                <h4 class="timeline-title"><a>The University of Texas at Dallas, <i>Dallas, Texas</i></a></h4>
+				<h5> Master's in Business Analytics </h5>
               </div>
               <div class="timeline-body">
-                <p>We are an established company with 12 years of industry standing. Experienced in providing software services
-                  to clients across the world at various time zones. Customer Relations are our forte and we ensure our clients
-                  are given the best support possible.</p>
+                <p>&#9679 Programming languages: Python, R, SQL<br>
+						&#9679 SQL and NoSQL databases: MySQL, MSSQL, MongoDB, Oracle<br>
+						&#9679 Big Data systems: Hadoop, Spark, Hive, Sqoop, NoSQL<br>
+						&#9679 Web, API's and Social Media Data Mining Techniques<br>
+						&#9679 Cloud services: AWS<br>
+						&#9679 Business Intelligence tools: Tableau, Power BI, Alteryx<br>
+						&#9679 Statistics and Prediction Models for Data Analytics using SAS<br>
+						&#9679 Business Analytics: Goals, Insights, Metrics, KPIs, Accuracy<br>
+						&#9679 Web Analytics: Google Analytics and Adobe Analytics</p>
                 <p><strong>Great! place to learn.</strong></p>
               </div>
             </div>
@@ -506,14 +513,14 @@ Python, R-Programming, Tableau, AWS" />
         </div>
 		<ul class="col-md-6 timeline">
           <li>
-            <div class="timeline-badge primary"><i class="glyphicon glyphicon-education"></i></div>
+            <div class="timeline-badge info"><i class="glyphicon glyphicon-education"></i></div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4 class="timeline-title"><a> VTU</a></h4>
+                <h4 class="timeline-title"><a> Visvesvaraya Technological University, <i>Bangalore, India</i></a></h4>
+				<h5>Bachelor's in Information Science</h5>
               </div>
               <div class="timeline-body">
-                <p>Through Osmosys I got a chance to work at Cox and kings for some period, Currently I'm working on <strong><a href="http://www.coxandkings.com/"><strong>Holidays Engine</strong></a>
-                  project in CKGS</strong>.</p>
+              
               </div>
             </div>
           </li>
