--- a/index.html
+++ b/index.html
@@ -460,10 +460,10 @@ Python, R-Programming, Tableau, AWS" />
 				<h5>Data Analytics Engineer</h5>
               </div>
               <div class="timeline-body">
-                <p>&#9679   Proposed 100+ solutions to clients over the period of 1 year using Pega’s analytical framework 
-					&#9679   Implemented and utilized predictive modelling in Pega Decision Strategy Management (DSM) application that successfully analyzed customer sentiments.
-					&#9679   Assisted and provided CRM solutions in 20+ projects entailing predictive analytics with customers across the globe.
-					&#9679   Implemented the Next Best Action advisor application utilizing pega’s built in natural language processing features</p>
+                <p>&#9679   Proposed 100+ solutions to clients over the period of 1 year using Pega’s analytical framework<br>
+					&#9679   Implemented and utilized predictive modelling in Pega Decision Strategy Management (DSM) application that successfully analyzed customer sentiments<br>
+					&#9679   Assisted and provided CRM solutions in 20+ projects entailing predictive analytics with customers across the globe<br>
+					&#9679   Implemented the Next Best Action advisor application utilizing pega’s built in natural language processing features<br></p>
               </div>
             </div>
           </li>
@@ -545,40 +545,20 @@ Python, R-Programming, Tableau, AWS" />
         <h3>MY <span>Projects</span></h3>
         <span class="border one"></span>
       </div>
-	  <!-- portfolio-wrapper -->
-	         <div id="folio-wrapper" class="block-1-2 block-mob-full stack">
-
-					<div class="bgrid folio-item">
-							<div class="item-wrap">
-								<img src="images/portfolio/Airbnb.jpg" alt="Img via Pixabay">
-							   <a href="#modal-05" class="overlay">             		                  
-								  <div class="folio-item-table">
-									  <div class="folio-item-cell">
-										  <h3 class="folio-title">Airbnb</h3>	     					    
-												  <span class="folio-types">
-													   Project Using scikit-learn, we modeled on Airbnb dataset to estimate prices of Airbnb listings for the guests depending on various features like neighborhood, zipcodes, apartment type etc.
-												</span>		     		
-											 </div> 	                      	
-								  </div>                    
-							   </a>
-							</div>
-							 </div> <!-- /folio-item -->
-			 
+	  			 
       <div class="news-grid w3l-agile">
         <div class="col-md-6 news-text">
-          <h3> <a href="http://www.coxandkings.com/" target="_blank">Travel Like Me</a></h3>
+          <h3> <a href="http://www.coxandkings.com/" target="_blank">AirBnb - Price Prediction</a></h3>
           <ul class="news">
-            <li>PHP</li>
-            <li>Symfony</li>
-            <li>JQuery</li>
-            <li>Angular</li>
-            <li>Redis</li>
-            <li>MySQL</li>
+            <li>Numpy</li>
+            <li>Pandas</li>
+            <li>Sci-kit learn</li>
+            <li>matplotlib</li>
+            <li>seaborn</li>
+            <li>Tableau</li>
           </ul>
-          <p><strong> Travel Like Me</strong> also called as Holidays Engine is an internal product of <a href='http://www.ckgs.com/'
-              target="_blank">CKGS</a>, it provides online travel services including flight tickets, domestic and international
-            holiday packages, hotel and alternative accommodations bookings, holiday planning and packaging etc.</p>
-          <a href="#" data-toggle="modal" data-target="#tlmMdl" class="read hvr-shutter-in-horizontal">Read More</a>
+          <p> Project Using scikit-learn, we modeled on Airbnb dataset to estimate prices of Airbnb listings for the guests depending on various features like neighborhood, zipcodes, apartment type etc.</p>
+          <a href="https://github.com/GowriDath/Airbnb_Price-Prediction" data-toggle="modal" data-target="#tlmMdl" class="read hvr-shutter-in-horizontal">Read More</a>
         </div>
         <div class="col-md-6 news-text">
           <h3> <a href="https://www.in.ckgs.us/" target="_blank">CKGS - VISA | Renunciation | OCI Applications</a></h3>
