--- a/index.html
+++ b/index.html
@@ -554,11 +554,10 @@ Python, R-Programming, Tableau, AWS" />
             <li>Pandas</li>
             <li>Sci-kit learn</li>
             <li>matplotlib</li>
-            <li>seaborn</li>
             <li>Tableau</li>
           </ul>
           <p> Project Using scikit-learn, we modeled on Airbnb dataset to estimate prices of Airbnb listings for the guests depending on various features like neighborhood, zipcodes, apartment type etc.</p>
-          <a href="https://github.com/GowriDath/Airbnb_Price-Prediction" data-toggle="modal" data-target="#tlmMdl" class="read hvr-shutter-in-horizontal">Read More</a>
+          <a href="#" data-toggle="modal" data-target="#tlmMdl" class="read hvr-shutter-in-horizontal">Read More</a>
         </div>
         <div class="col-md-6 news-text">
           <h3> <a href="https://www.in.ckgs.us/" target="_blank">CKGS - VISA | Renunciation | OCI Applications</a></h3>
@@ -753,7 +752,7 @@ v class="modal-content about">
     <div class="modal-dialog about" role="document">
       <div class="modal-content about">
         <div class="modal-header">
-          <span class="project-title">Travel Like Me </span>
+          <span class="project-title">Airbnb_Price-Prediction </span>
           <button type="button" class="close ab" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         </div>
         <div class="modal-body about">
@@ -761,27 +760,27 @@ v class="modal-content about">
 
             <div class="about-inner">
               <div class="col-md-6">
-                <img src="images/b3.jpg" class="project-img" alt="about" />
+                <img src="images/Airbnb.jpg" class="project-img" alt="about" />
               </div>
               <div class="col-md-6">
                 <ul>
-                  <li><strong>Project</strong> : Travel Like Me ( Holidays Engine ) </li>
-                  <li><strong>Team Size</strong> : 8</li>
-                  <li><strong>Client</strong> : Cox & Kings Global Services (IND | USA)</li>
-                  <li><strong>Duration</strong> : Nov 2017 - Till Date</li>
-                  <li><strong>Technologies</strong>: PHP, Symfony, JavaScript, Jquery, Bootstrap and MySQL</li>
-                  <li><strong>Servers </strong>: Apache on Linux</li>
+                  <li><strong>Project</strong> : AIRBNB </li>
+                  <li><strong>Team Size</strong> : 4</li>
+                  <li><strong>Data</strong> : InsideAirbnb</li>
+                  <li><strong>Duration</strong> : Oct 2019 - Dec 2019</li>
+                  <li><strong>Category</strong>: Python, Tableau, Machine Learning</li>
+                  
                 </ul>
               </div>
             </div>
             <div class="clearfix"></div>
             <div class="about-inner">
-              <div class="project-title my-responsibilit">My Responsibilities</div>
+              <div class="project-title my-responsibilit">Tried to answer some of the questions like</div>
               <ul>
-                <li> Design UI and front end functionality using Bootstrap, Angular and JQuery..</li>
-                <li> Write Business logic using PHP - Symphony.</li>
-                <li> Setup Dev and staging environments using Gitlab CI and CD or Ansible</li>
-                <li> Frequent code reviews.</li>
+                <li> What are the most important characteristics of a listings in Denver, and how do they influence the price?</li>
+                <li> Which neighborhoods in Denver have the highest rental prices?</li>
+                <li> What distinguishes hosts that have Superhost status? Do all Superhosts properly qualify the criteria that AirBnB has set for them?</li>
+				<li> Does reducing the dimensionality of the dataset lead to loss in information?</li>
               </ul>
             </div>
 
