--- a/index.html
+++ b/index.html
@@ -752,7 +752,7 @@ v class="modal-content about">
     <div class="modal-dialog about" role="document">
       <div class="modal-content about">
         <div class="modal-header">
-          <span class="project-title">Airbnb_Price-Prediction </span>
+          <span class="project-title">Airbnb Price Prediction </span>
           <button type="button" class="close ab" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         </div>
         <div class="modal-body about">
@@ -781,6 +781,7 @@ v class="modal-content about">
                 <li> Which neighborhoods in Denver have the highest rental prices?</li>
                 <li> What distinguishes hosts that have Superhost status? Do all Superhosts properly qualify the criteria that AirBnB has set for them?</li>
 				<li> Does reducing the dimensionality of the dataset lead to loss in information?</li>
+				<a href="https://github.com/GowriDath/Airbnb_Price-Prediction" class="read hvr-shutter-in-horizontal">GO TO REPO</a>
               </ul>
             </div>
 
