--- a/index.html
+++ b/index.html
@@ -764,12 +764,8 @@ v class="modal-content about">
               </div>
               <div class="col-md-6">
                 <ul>
-                  <li><strong>Project</strong> : AIRBNB </li>
-                  <li><strong>Team Size</strong> : 4</li>
-                  <li><strong>Data</strong> : InsideAirbnb</li>
-                  <li><strong>Duration</strong> : Oct 2019 - Dec 2019</li>
-                  <li><strong>Category</strong>: Python, Tableau, Machine Learning</li>
-                  
+		  <div class="categories">Python, Tableau, Machine Learning</div>
+                                    
                 </ul>
               </div>
             </div>
