--- a/index.html
+++ b/index.html
@@ -90,12 +90,8 @@ Python, R-Programming, Tableau, AWS" />
         </div>
         <div class="banner-info">
           <div class="col-md-7 header-right">
-            <h1>Gowri Dath</h1>
-		  <p class="intro-position">
-	   				<span>Data Analysis</span>
-					   <span>Business Intelligence</span>
-	   				<span>Machine Learning</span> 
-	   			</p>
+            <h1>GOWRI DATH</h1>
+		  
             <h6>Aspiring BI Engineer </h6>
             <div class="hero__links">
               <a href="docs/Gowri_Dath(Resume_2020).pdf" target="_blank" class="hero__resume btn" title="Click to view my Resume">View Resume</a>
