--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@ Python, R-Programming, Tableau, AWS" />
                   <li><a class="scroll" data-hover="About" href="#about">About</a></li>
                   <li><a class="scroll" data-hover="Skills" href="#services">Skills</a></li>
                   <li><a class="scroll" data-hover="Experience" href="#work">Experience</a></li>
+		  <li><a class="scroll" data-hover="Education" href="#education">Contact</a></li>
                   <li><a class="scroll" data-hover="Projects" href="#blogs">Projects</a></li>
                   <li><a class="scroll" data-hover="Contact" href="#contact">Contact</a></li>
                 </ul>
@@ -124,7 +125,7 @@ Python, R-Programming, Tableau, AWS" />
               <li>
                 <ul class="address-text">
                   <li><b>MOBILE </b></li>
-                  <li>+14693805016</li>
+                  <li>+1-(469)380-5016</li>
                 </ul>
               </li>
               <li>
@@ -279,11 +280,13 @@ Python, R-Programming, Tableau, AWS" />
           <div class="clearfix"> </div>
           <div class="col-md-12 skill-group-div">
             <!-- Skill Bars -->
+	    <div class="col-md-6">
             <div class="progress skill-bar ">
               <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
                 <span class="skill">Tableau <i class="val">85%</i></span>
               </div>
             </div>
+	    </div>
             <div class="col-md-6">
               <div class="progress skill-bar">
                 <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
@@ -291,34 +294,15 @@ Python, R-Programming, Tableau, AWS" />
                 </div>
               </div>
             </div>
-            <div class="col-md-6">
+	     <div class="col-md-6">
               <div class="progress skill-bar">
-                <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
-                  <span class="skill">Symfony <i class="val">70%</i></span>
+                <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                  <span class="skill">Alteryx <i class="val">70%</i></span>
                 </div>
               </div>
             </div>
-            <div class="col-md-6">
-              <div class="progress skill-bar">
-                <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">
-                  <span class="skill">Laravel <i class="val">65%</i></span>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6">
-              <div class="progress skill-bar">
-                <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
-                  <span class="skill">Wordpress <i class="val">60%</i></span>
-                </div>
-              </div>
-            </div>
-            <div class="clearfix"></div>
-            <div class="progress skill-bar ">
-              <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">
-                <span class="skill">NodeJS <i class="val">65%</i></span>
-              </div>
-            </div>
-          </div>
+            
+            
           <div class="clearfix"> </div>
         </div>
         <div class="clearfix"></div>
@@ -334,7 +318,7 @@ Python, R-Programming, Tableau, AWS" />
             <h4>Databases</h4>
             <ul class="news">
               <li>MySql</li>
-              <li>MariaDB</li>
+              <li>MS SQL</li>
               <li>MongoDB</li>
               <li>Oracle</li>
             </ul>
@@ -352,8 +336,7 @@ Python, R-Programming, Tableau, AWS" />
             <ul class="news">
               <li>Agile</li>
               <li>Scrum</li>
-              <li>Git & BitBucket</li>
-              <li>SVN</li>
+              <li>Git</li>
               <li>Jira</li>
             </ul>
           </div>
