--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@ Python, R-Programming, Tableau, AWS" />
 				&#9679   Converted JSON to PostgreSQL queries by analyzing the JSON output from the Swagger UI which optimized the database and improved the API response time<br>
 				&#9679   Developed the skills required to function within an agile team by formulating the requirements and the acceptance criteria for a functionality through tools like Confluence and JIRA<br>
 				&#9679   Transformed data into reports, charts and presentation that provided key findings and recommendations to the senior management<br></p>
-                <a href="https://www.linkedin.com/pulse/summer-2019-internship-experience-transamerica-corporation-gowri-dath/" class="read hvr-shutter-in-horizontal">Read my Experience</a>
+                <a href="https://www.linkedin.com/pulse/summer-2019-internship-experience-transamerica-corporation-gowri-dath/">Read my Experience</a>
 				
               </div>
             </div>
