--- a/index.html
+++ b/index.html
@@ -594,52 +594,42 @@ Python, R-Programming, Tableau, AWS" />
           <a href="#" data-toggle="modal" data-target="#tlmMdl" class="read hvr-shutter-in-horizontal">Read More</a>
         </div>
         <div class="col-md-6 news-text">
-          <h3> <a href="https://www.in.ckgs.us/" target="_blank">CKGS - VISA | Renunciation | OCI Applications</a></h3>
+          <h3> <a>Home Depot Product Search Relevance </a></h3>
           <ul class="news">
-            <li>PHP</li>
-            <li>Symfony</li>
-            <li>JQuery</li>
-            <li>Angular</li>
-            <li>Redis</li>
-            <li>MySQL</li>
+            <li>Numpy</li>
+            <li>Pandas</li>
+            <li>Sklearn</li>
+            <li>NLTK</li>
+            <li>Matplotlib</li>
+            <li>Seaborn</li>
           </ul>
-          <p><strong> Cox and Kings Global Services (CKGS)</strong> deals with Visa / OCI / Renunciation processing from Italy to Dubai. The basic
-            expectation for <strong> Visa / OCI / Renunciation </strong> Processing Application is given below. The expected application deals
-            with helps users with visa documentation and processing. With the help of users basic information and needs it
-            should calculate the visa type which will be suitable for the user and helps users with checklist, procedures
-            and form filling areas. </p>
+          <p>This is a challenge to predict the search relevance of search results on homedepot.com</p>
           <a href="#" data-toggle="modal" data-target="#ckgsMdl" class="read hvr-shutter-in-horizontal">Read More</a>
         </div>
         <div class="clearfix"></div>
       </div>
       <div class="news-grid w3l-agile">
         <div class="col-md-6 news-text">
-          <h3> <a href="https://www.bookstackapp.com/" target="_blank">Bookstack</a></h3>
+          <h3> <a>   Predictive Analysis of Folgers Coffee Product width </a></h3>
           <ul class="news">
-            <li>PHP</li>
-            <li>Laravel</li>
-            <li>VueJS</li>
-            <li>Angular</li>
+            <li>SAS</li>
+            <li>R-Dplyr</li>
+            <li>R-rfm</li>
+            <li>Tableau</li>
             <li>MySQL</li>
           </ul>
-          <p>Contributed to open source application Bookstack which is built with PHP & Laravel, which is helpful to create
-            documentation/Wiki content info. BookStack is a simple, self-hosted, easy-to-use platform for organising and
-            storing information, more info can be found here https://www.bookstackapp.com/</p>
+          <p>Developed robust marketing strategy to increase revenues of Folgers Coffee Brand (Ground Coffee-Category). Performed predictive and exploratory analysis performed with a goal to boost sales of Folgers and provide strategic insights to the marketing team.</p>
           <a href="#" data-toggle="modal" data-target="#bookStackMdl" class="read hvr-shutter-in-horizontal">Read More</a>
         </div>
         <div class="col-md-6 news-text">
-          <h3> <a href="http://demo.pinestem.com/login.html" target="_blank">PineStem</a></h3>
+          <h3> <a>Analysis of E-commerce Online Retail dataset to perform Market Basket and Item-based Collaborative Filtering</a></h3>
           <ul class="news">
-            <li>PHP</li>
-            <li>.Net</li>
-            <li>Java</li>
-            <li>Angular JS</li>
-            <li>React</li>
-            <li>MySQL</li>
+            <li>R</li>
+            <li>Tableau</li>
+ 
           </ul>
-          <p>PineStem is a project management tool which has unique feature of Artificial intelligence to identify the most
-            suitable resource from your team for a given task. It’s made for helping and doing things efficiently.</p>
-          <a href="#" data-toggle="modal" data-target="#pineStemMdl" class="read hvr-shutter-in-horizontal">Read More</a>
+          <p>Recommended products to customers based on their past likings and opinions of other like-minded users and determine the products and market of focus.</p>
+		  <a href="#" data-toggle="modal" data-target="#Filtering" class="read hvr-shutter-in-horizontal">Read More</a>
         </div>
         <div class="clearfix"></div>
       </div>
