--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@ Python, R-Programming, Tableau, AWS" />
                 </div>
               </div>
             </div>
-            
+            </div>
             
           <div class="clearfix"> </div>
         </div>
