--- a/index.html
+++ b/index.html
@@ -676,97 +676,32 @@ Python, R-Programming, Tableau, AWS" />
       </div>
       <div class="news-grid w3l-agile">
         <div class="col-md-6 news-text">
-          <h3> <a href="http://www.baselinetelematics.com/solutions/pay-as-you-drive/" target="_blank">BaseDrive  (Pay as you drive)</a></h3>
+          <h3> <a>Data Visualization Projects</a></h3>
           <ul class="news">
-            <li>CakePHP</li>
-            <li>CRM</li>
-            <li>.Net</li>
-            <li>LUA</li>
-            <li>Bootstrap</li>
-            <li>Redis</li>
-            <li>MySQL</li>
+            <li>Tableau</li>
+			<li>matplotlib</li>
+			<li> ggplot </li>
           </ul>
-          <p>BaseDrive is a powerful auto-insurance mobile application compatible on both Android and Apple phones, providing
-            unparalleled power and visibility to its users; it is downloaded to collect and track the drivers’ performance
-            as well as allowing unprecedented real time access to all of their insurance information.</p>
-          <p>Combined with a device installed in the vehicle, the app connects to the vehicle device via Bluetooth to capture
-            the data, then transmitting it to the Command Center for Insurers to capture and manage the data.</p>
-          <a href="#" data-toggle="modal" data-target="#baseDriveMdl" class="read hvr-shutter-in-horizontal">Read More</a>
+          <p>Check out my tableau public profile</p>
+          <a href="https://public.tableau.com/profile/gowridath"  class="read hvr-shutter-in-horizontal">Tableau Public</a>
         </div>
         <div class="col-md-6 news-text">
-          <h3> <a href="https://counterpick.com/" target="_blank">Counterpick </a></h3>
+          <h3> <a>Hackerrank </a></h3>
           <ul class="news">
-            <li>VueJS</li>
-            <li>NodeJS</li>
-            <li>MySQL</li>
+            <li>Python</li>
+            <li>SQL</li>
+            <li>Problem Solving</li>
+			<li>Statistics</li>
           </ul>
-          <p>Counterpick is hero picking web application for the game League of Legends. It combines enemy counter picking with
-            team synergy to help you draft better. The primary focus is to provide as much information as possible so that
-            you can decide what to pick from a smaller number of heroes. It can help you to go outside of your comfort zone
-            picking heroes you wouldn't normally consider. After selecting it predicts the percentage of winning chance of
-            teams.
-          </p>
-          <a href="#" data-toggle="modal" data-target="#counterPickMdl" class="read hvr-shutter-in-horizontal">Read More</a>
+          <p>Check out my profile on Hackerrank</p>
+          <a class="read hvr-shutter-in-horizontal">Hackerrank</a>
         </div>
         <div class="clearfix"></div>
       </div>
-      <div class="news-grid w3l-agile">
-        <div class="col-md-6 news-text">
-          <h3> <a href="#" data-toggle="modal" data-target="#rivengMdl">Riveng </a></h3>
-          <ul class="news">
-            <li>Core PHP</li>
-            <li>JavaScript</li>
-            <li>JQuery</li>
-            <li>MySQL</li>
-
-          </ul>
-          <p>It is one of the information systems services of Hong Kong visa services consultancy office. It is used to store
-            details of their consultants along with their passport files, resources documents etc. It is a single page application.It
-            also acts as mail client. It has the facility to send, receive, drafts mails in it.In addition to mail client
-            it deals with different documents, in other words we can say which a combination of mail client, file system
-            and information services system provider.
-          </p>
-          <a href="#" data-toggle="modal" data-target="#rivengMdl" class="read hvr-shutter-in-horizontal">Read More</a>
-
-        </div>
-        <div class="col-md-6 news-text">
-          <h3> <a href="http://wishlist.do/" target="_blank">Wishlist.Do</a></h3>
-          <ul class="news">
-            <li>CakePHP</li>
-            <li>Redis</li>
-            <li>JQuery</li>
-            <li>MySQL</li>
-          </ul>
-          <p>WishList.Do is a mobile application built with an intention to provide the mobile world an app to do things quicker
-            and with better collaboration among the crowd. This app lets you manage your contacts into a “crowd” so that
-            if you wish to buy something, just by listing it here, anyone from your crowd in a store or near a store can
-            pick it up for you. WishList.do app has features like Crowd Basket, Action Station, Proxi-meter and My Crowd.</p>
-          <a href="#" data-toggle="modal" data-target="#wishlistMdl" class="read hvr-shutter-in-horizontal">Read More</a>
-        </div>
-        <div class="clearfix"></div>
-      </div>
-      <div class="news-grid w3l-agile">
-        <div class="col-md-6 news-img">
-          <a href="#" data-toggle="modal" data-target="#slogerrMdl"> <img src="images/b1.jpg" alt=" " class="img-responsive"></a>
-        </div>
-        <div class="col-md-6 news-text">
-          <h3> <a href="http://slogerr.osmosys.asia/" target="_blank">SLogErr </a></h3>
-          <ul class="news">
-            <li>CakePHP</li>
-            <li>JavaScript</li>
-            <li>JQuery</li>
-            <li>Bootstrap</li>
-            <li>MySQL</li>
-          </ul>
-          <p>SLogErr has a central repository in which you can log all the errors thereby allowing you to access all the error
-            logs of the projects in a single application.For those of the programmers who want to ensure that users have
-            an error free experience while interacting with their product, Osmosys has brought forth a revolutionary product
-            named SLogErr, Software Logging errors for FREE.
-          </p>
-          <a href="#" data-toggle="modal" data-target="#slogerrMdl" class="read hvr-shutter-in-horizontal">Read More</a>
-
-    </div>
-  </div>
+      
+	  
+	  
+      
   <!-- top-grids -->
   <!-- /blog-pop-->
   <div class="modal ab fade" id="baseDriveMdl" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
