--- a/index.html
+++ b/index.html
@@ -694,7 +694,7 @@ Python, R-Programming, Tableau, AWS" />
 			<li>Statistics</li>
           </ul>
           <p>Check out my profile on Hackerrank</p>
-          <a class="read hvr-shutter-in-horizontal">Hackerrank</a>
+          <a href="https://www.hackerrank.com/gxd180003" class="read hvr-shutter-in-horizontal">Hackerrank</a>
         </div>
         <div class="clearfix"></div>
       </div>
