--- a/index.html
+++ b/index.html
@@ -801,6 +801,7 @@ v class="modal-content about">
                 <img src="images/homedepot.jpg" class="project-img" alt="about" />
               </div>
               <div class="col-md-6">
+			  <div class="categories">Python, Natural Language Processing</div>
                 <ul>
                   
                 </ul>
@@ -870,7 +871,7 @@ v class="modal-content about">
     <div class="modal-dialog about" role="document">
       <div class="modal-content about">
         <div class="modal-header">
-          <span class="project-title">Bookstack</span>
+          <span class="project-title">Folgers - Marketing Predictive Analytics</span>
           <button type="button" class="close ab" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         </div>
         <div class="modal-body about">
@@ -878,13 +879,13 @@ v class="modal-content about">
 
             <div class="about-inner">
               <div class="col-md-6">
-                <img src="images/b3.jpg" class="project-img" alt="about" />
+                <img src="images/folgers.jpg" class="project-img" alt="about" />
               </div>
               <div class="col-md-6">
-                <p class="left-align">For this project I've contributes for this module 'Book Coverart and Grid Display'. Desired Feature - Allow
-                  users to upload a cover for a book and to change the Views Page to allow for grid display of covers, thereby
-                  allowing more books on the one page before pagination. Perhaps something similar to how amazon or sitepoint
-                  display books. You can see the pull request - <a href='https://github.com/BookStackApp/BookStack/pull/494'>here</a>'
+			  <div class="categories">SAS, Statistical Analysis, Predictive Analytics</div>
+                <p class="left-align">Developed robust marketing strategy to increase revenues of Folgers Coffee Brand. This analysis presents the predictive and exploratory analysis performed with a goal to boost sales of Folgers and provide strategic insights to the marketing team. We have done series of studies and came up with actionable ideas presented in this
+                 <a href="https://github.com/GowriDath/Predictive-Analysis-of-Folgers-Coffee-Product-width/blob/master/SASProject_Group1(Documentation).pdf">report.
+				  <a href='https://github.com/GowriDath/Predictive-Analysis-of-Folgers-Coffee-Product-width' class="read hvr-shutter-in-horizontal">GO TO REPO</a>'
                 </p>
               </div>
             </div>
