--- a/index.html
+++ b/index.html
@@ -659,7 +659,7 @@ Python, R-Programming, Tableau, AWS" />
             <li>Tableau</li>
             <li>MySQL</li>
           </ul>
-          <p>Developed robust marketing strategy to increase revenues of Folgers Coffee Brand (Ground Coffee-Category). Performed predictive and exploratory analysis performed with a goal to boost sales of Folgers and provide strategic insights to the marketing team.</p>
+          <p>Analyzed large panel database and performed competitor analysis to help Folgers increase their sales</p>
           <a href="#" data-toggle="modal" data-target="#bookStackMdl" class="read hvr-shutter-in-horizontal">Read More</a>
         </div>
         <div class="col-md-6 news-text">
@@ -889,8 +889,7 @@ v class="modal-content about">
                 </p>
               </div>
             </div>
-            <div class="about-inner">
-            </div>
+            
           </div>
         </div>
       </div>
