--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
   <meta name="keywords" content="Gowri Dath Resume Portfolio Preface Responsive web template, Data Science Portfolio, Business Intelligence, Business Analytics,
 Python, R-Programming, Tableau, AWS" />
   <!-- Favicons -->
-  <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="images/profile.jpg">
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
   <link rel="manifest" href="/manifest.json">
