--- a/index.html
+++ b/index.html
@@ -776,7 +776,7 @@ v class="modal-content about">
                 <li> What are the most important characteristics of a listings in Denver, and how do they influence the price?</li>
                 <li> Which neighborhoods in Denver have the highest rental prices?</li>
                 <li> What distinguishes hosts that have Superhost status? Do all Superhosts properly qualify the criteria that AirBnB has set for them?</li>
-				<li> Does reducing the dimensionality of the dataset lead to loss in information?</li>
+				<li> Does reducing the dimensionality of the dataset lead to loss in information?<br><br></li>
 				<a href="https://github.com/GowriDath/Airbnb_Price-Prediction" class="read hvr-shutter-in-horizontal">GO TO REPO</a>
               </ul>
             </div>
@@ -810,7 +810,7 @@ v class="modal-content about">
             <div class="clearfix"></div>
             <div class="about-inner">
               <div class="project-title my-responsibilit tex-align-left">Description </div>
-                <p>Used natural language processing (NLTK) to derive the word stems on the product title, description and search terms. created features based on cosine distance, shared words, Edit distances, Search query length of the product title and description Read more..</p>
+                <p>Used natural language processing (NLTK) to derive the word stems on the product title, description and search terms. created features based on cosine distance, shared words, Edit distances, Search query length of the product title and description Read more..<br><br></p>
 				<a href="https://github.com/GowriDath/HomeDepot_SearchRelevance-" class="read hvr-shutter-in-horizontal">GO TO REPO</a>
               </div>
               
@@ -930,7 +930,7 @@ v class="modal-content about">
                 <li>To improve the sales of online e-commerce website using historical customer data to derive association rules and finding products to group together</li>
 				<li>To generate a list of top items strongly associated with a particular basket</li>
 				<li>To suggest new items to a customer using item-based collaborative filtering based on his transactional history</li>
-				<li>To draw conclusions and make necessary suggestions</li>
+				<li>To draw conclusions and make necessary suggestions<br><br></li>
 				<a href="https://github.com/GowriDath/MarketBasketAndCollaborativeFiltering" class="read hvr-shutter-in-horizontal">GO TO REPO</a>
                 
               </ul>
