--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@ Python, R-Programming, Tableau, AWS" />
         </div>
         <ul class="col-md-6 timeline">
           <li>
-            <div class="timeline-badge info"><i class="glyphicon glyphicon-education"></i></div>
+            <div class="timeline-badge info"><i class="glyphicon glyphicon-book"></i></div>
             <div class="timeline-panel">
               <div class="timeline-heading">
                 <h4 class="timeline-title"><a>The University of Texas at Dallas, <i>Dallas, Texas</i></a></h4>
@@ -500,7 +500,7 @@ Python, R-Programming, Tableau, AWS" />
         </div>
 		<ul class="col-md-6 timeline">
           <li>
-            <div class="timeline-badge info"><i class="glyphicon glyphicon-education"></i></div>
+            <div class="timeline-badge info"><i class="glyphicon glyphicon-book"></i></div>
             <div class="timeline-panel">
               <div class="timeline-heading">
                 <h4 class="timeline-title"><a> Visvesvaraya Technological University, <i>Bangalore, India</i></a></h4>
