--- a/index.html
+++ b/index.html
@@ -354,10 +354,11 @@ Python, R-Programming, Tableau, AWS" />
             <ul class="news">
 			  <li>AWS(S3,EC2,VPC,RDS,Redshift,Athena)</li>
               <li>Microsoft Excel</li>
+			  <ul class="news">
               <li>SPSS</li>
               <li>Google Data Studio</li>
-            </ul>
-          </div>
+              </ul
+              </div>
           <div class="clearfix"> </div>
         </div>
         <div class="col-md-6 wthree_about_right_grid">
